# hydroponics

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  sample_env
api/: serializers.py  urls.py  views.py
api/tests/: test_measurement_view.py  test_views.py
hydroponics/: env.py  settings.py  urls.py
hydroponics_manager/: apps.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
hydroponics_manager/migrations/: 0001_initial.py  0002_rename_measurement_date_measurement_timestamp_and_more.py  0003_alter_hydroponicsystem_options_and_more.py
hydroponics_manager/templates/hydroponics_manager/: base.html  delete_confirm.html  detail.html  form.html  list.html  login.html
hydroponics_manager/templates/hydroponics_system/: delete_confirm.html  detail.html
hydroponics_manager/tests/: test_models_and_factories.py  test_views.py
scripts/: fill_db.py
